// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer CHANGE_HASHTAGS 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "#FOO",
  "healthy": false,
  "items": Array [
    Object {
      "length": 9,
      "tweet": "bar #FOO ",
    },
  ],
  "linefeed": ";;",
  "notification": null,
  "source": "bar",
  "userId": null,
}
`;

exports[`reducer CHANGE_LINEFEED 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": false,
  "items": Array [
    Object {
      "length": 38,
      "tweet": "Can you can a can [..] as a canner 1/2",
    },
    Object {
      "length": 18,
      "tweet": "can can a can? 2/2",
    },
  ],
  "linefeed": "||",
  "notification": null,
  "source": "Can you can a can [..] as a canner || can can a can?",
  "userId": null,
}
`;

exports[`reducer CHANGE_SOURCE 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": false,
  "items": Array [
    Object {
      "length": 4,
      "tweet": "bar ",
    },
  ],
  "linefeed": ";;",
  "notification": null,
  "source": "bar",
  "userId": null,
}
`;

exports[`reducer DISMISS_TOAST 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": false,
  "items": Array [],
  "linefeed": ";;",
  "notification": null,
  "source": "",
  "userId": null,
}
`;

exports[`reducer RESET_TWEETSTORM 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": true,
  "items": Array [],
  "linefeed": ";;",
  "notification": Object {
    "message": "Oh Noes!",
    "type": "danger",
  },
  "source": "",
  "userId": "twitter|1183836409850814464",
}
`;

exports[`reducer SET_HEALTHY 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": true,
  "items": Array [],
  "linefeed": ";;",
  "notification": null,
  "source": "",
  "userId": null,
}
`;

exports[`reducer SET_USER_ID 1`] = `
Object {
  "feature": Object {
    "active": [Function],
  },
  "hashtags": "",
  "healthy": false,
  "items": Array [],
  "linefeed": ";;",
  "notification": null,
  "source": "",
  "userId": "twitter|1183836409850814464",
}
`;

exports[`reducer default 1`] = `
Object {
  "feature": undefined,
  "hashtags": "",
  "healthy": false,
  "items": Array [],
  "linefeed": ";;",
  "notification": null,
  "source": "",
  "userId": null,
}
`;
